addons/shared_addons/themes/base/css/events.css
/*
.event{
	max-height: 220px;
	border: 1px solid rgba(0, 0, 0, 0.2);
	overflow: hidden;
}
*/
/*General CSS, aplied for all the screens (mobile first)*/
body {
	font-family: Impact;
	color: #676679;
	height:auto;
	margin:0;
}

body, button, input, select, textarea{
	color: #666578;
}
a{
	color: #666578;
}

a:hover{
	color: #C03D3C !important;
}

.event_red_text{
	font-family: inherit;
	color: #C03D3C;
}


.container {
	background-color:#E5E4E3;
	margin:0 auto;
	width:100%;
	height:auto;
	min-height: 800px;  /*min heigt needed when there are no event*/
}

a{
	text-decoration:none;
}

ul{
	padding:0;
	margin:0;
}


header{
	background-color:#E5E4E3;
	float:none;
	height:auto;
	text-align: center;
	padding: 0;
	border:0;
	width:100%;
	margin:0 auto;
}

#content{
	background-color:#E5E4E3;
	padding: 2% 0 0 0;
	width:90%;
	float:none;
	margin:0 auto;
	margin-top: 1%;
}

.admin_label{
	width:50px;
}

h1#event_site_logo{
	margin:0 0 1% 0;
	font-size: 3em;
}

#event_site_logo a{
	font-family: Impact;
	color: #676679;
	margin:0 0 0 0;
}

h2#event_site_slogan{
	margin:0;
	color: #676679;
	font-family: Georgia;
	font-size: 1.1em;
	line-height: 1.2em;
}

/*Left menu (calendar)*/
.event_left_menu{
	display:none; /*FIXME hide months in mobile screen*/
}

#event_left_menu_months{
	list-style: none;
}
/**************************/
/* Right menu (navigation)*/
#ul_mobile_container{
	overflow: hidden;	
}

#ul_right_mobile{
	overflow: hidden;
	 text-align:center;
}

#ul_left_mobile{
 text-align:center;
	float: left;
	margin:0 auto;
}

.event_right_menu ul{   /*Right menu is placec before post_container to avoid problems with floats*/
	list-style: none;
	font-weight:bold;
	width:40%; /**/
}
.event_right_menu li{
	font-size: 1.2em;
	color: #666578;
	padding: 4% 2%;
	margin:auto;
}	



.event_post_container{
	background: #E5E4E3;
	/*padding: 5px 15px 15px 15px;
	float:left;	
		display:inline-block;
		*/
	/*margin: 0 15px 15px 0;*/
	/*outline: 3px solid rgba(0, 0, 0, 0.03);*/
	/*border: 1px solid rgba(0, 0, 0, 1);*/
	/*width: 240px;*/
}

#twitter_logo{
	width:35px;
	height:29px;
}

#facebook_logo{
	width:22px;
	height:29px;
}

.li_horizontal{
	 display: inline;
	 list-style-type: none;
	 padding-right: 20px;
}

#SendButton{
	margin-bottom: 4%;
}

/*End of right menu*/


/*Your event page*/
.your_event_form ul{
	list-style: none;
}

.your_event_form li{
	margin: 2% 0% 0% 0%;
}
.your_event_form p{
	margin:0 0 0 1em;
}

.form_input_wrapper{
    overflow: hidden; /* add this to contain floated children */
}
.form_input{
	float:left;
}
.form_input .input{
/* 	width:50%; */
	height:2em;	
}

.form_error{
	float:left;
}

.event_form_button{
	font-family: Impact;

	width:100px;
	height:50px;
	margin-right: 2%;
	font-size: 1.1em;

}

.your_event_buttons{
	margin: 2% 0% 0% 0%;
}

/* FORMAT PLACEHOLDERS
input::-webkit-input-placeholder {
	font-size: 2em;
}
/ For Mozilla Firefox 
input:-moz-placeholder {
	font-size: 2em;
}
*/

/*End of YourEvent page */


/*Text selection*/
::selection {
	background: #C03D3C; /* Safari */
	}
::-moz-selection {
	background: #C03D3C; /* Firefox */
}


/****   Event post   ****/
/************************/
.event_post{
	margin:0 0 2% 0;
	background: #ffffff;
	min-height: 65px;
	min-width: 350px;
}

.event_body{
	display: none;
	font-size:100%;
    color: #666578;
	font-family: Georgia;
}

.event_info{
	line-height: 1.3em;
	font-style: italic;
	padding:0 0 0 2%;
}


.event_content{
	max-height: 70px;
	width:80%;
	overflow: hidden;
	padding:0;
	margin:0 auto;
/* 	margin:0 6% 0 6%; */
}



/*event_header*/
.event_date{
	padding:2% 0 0 2%;
	float:left;
	width:20% auto;
	display: inline-block;
	font-size:1.8em;
	font-weight: 500;
	vertical-align: middle;
	font-family: Impact;
	transform : scale(1,1.5);
	-webkit-transform:scale(1,1.5); /* Safari and Chrome */
	-moz-transform:scale(1,1.5); /* Firefox */
	-ms-transform:scale(1,1.5); /* IE 9+ */
	-o-transform:scale(1,1.5); /* Opera */
	margin-right:2%;
}

.event_title{
	width:auto;
	overflow: hidden;
	vertical-align:middle;	
	/*display:block;*/

}
.event_title h3{
	overflow: hidden;
	display: block;
	margin:0 auto;
}

.event_title a{
	font-size:1.4em;
	font-family: Impact;
	color: #666578;
}

/*event_body*/
.event_info_list li{
	list-style: none;
	display: inline; 
	margin:0;
}


.info-tag{
	background: #ffffff;
}


#info-tag-time{
	font-weight: bold;
}

/*button to show more*/
.btn_show_content{
	position:relative;
	float:right;
	bottom:38px;
	right:3px;
}

#collapse_button{
	height:6px;
	width:35px;
}

#expand_button{
	height:35px;
	width:35px;

}

/****************************************************************************************/
/* START OF RESPONSIVE CODE:
Small tablet portrait 
@media only screen and (min-width: 641px) {

iPad portrait 
@media only screen and (min-width: 769px) {

Small browser / iPad landscape 
@media only screen and (min-width: 1025px) {

 Generic browser 
@media only screen and (min-width: 1281px) {

 Large browser 
@media only screen and (min-width: 1600px) {

/****************************************************************************************/





/*************************/
/* Small tablet portrait */
@media only screen and (min-width: 641px) {
	h1#event_site_logo{
		margin:0 0 1% 0;
		font-size: 4em;
	}
	
	/*Right menu mobile*/
	#ul_mobile_container{
/* 		overflow: hidden;	 */
	}
	
	#ul_right_mobile{
/* 		overflow: hidden; */
		 text-align:left;
		 width:100%;
	}
	
	#ul_left_mobile{
		 text-align:left;
/* 		float: left; */
/* 		margin:0 auto; */
	}

	.event_post_container{
		width:80%;	
	}
	.event_right_menu{
		width:18%;

		float:right;	
		margin:0 0 0 0;
		padding:0 0 0 0;
	}
	.event_right_menu ul{
		padding: 0;
		margin:0 auto;	
		width:auto;
	}
	.event_right_menu li{
		font-size: 1.2em;
		padding:0% 2% 5%; /*Change respect small size: text now alligned to left, */
	}
	.event_date{
		font-size:2em;
	}

}


/*****************/
/* iPad portrait */
@media only screen and (min-width: 769px) {
	h1#event_site_logo{
		font-size: 5em;
	}
	.event_post_container{
		width:80%;	
	}
	
	.event_right_menu{
		width:18%;
		float:right;	
		margin:0 0 0 0;
		padding:0 0 0 0;
	}
	.event_right_menu ul{
		padding: 0;
		margin:0 auto;	
	}
	.event_right_menu li{
		font-size: 1.4em;
	}
	
	.event_body{	
		display:block;
	}
	.event_date{
		font-size:2.3em;
	}

}


/**********************************/
/* Small browser / iPad landscape */
@media only screen and (min-width: 1025px) {

	h1#event_site_logo{
		font-size: 5em; /*5*/
	}
	.event_post_container{
		width:65%;	
		margin:0 auto;	
	}
	
	.event_date{
		font-size:2.7em;
	}
	.event_right_menu{
		width:15%;
		float:right;	
		margin:0 0 0 0;
		padding:0 0 0 0;
	}
	.event_right_menu ul{
		padding: 0;
		margin:0 auto;	
	}
	.event_right_menu li{
		font-size: 1.4em;
		padding:0% 2% 5%; /*Change respect small size: text now alligned to left, */
		
	}

	/*Left menu*/
	.event_left_menu{
		padding: 0;
		width:15%;
		float:left;
		display:block;
		margin-right:0 auto;
	}
	
	/*Event post*/
	.event_body{	
		display:block;
	}

}



/* Generic browser */
@media only screen and (min-width: 1281px) {
	h1#event_site_logo{
		font-size: 7em;
	}
	
	.event_title h3 a{
		font-size: 2.4em;
	}
	
	.event_date{
		font-size:4.7em;

	}
	
	.event_header{
		min-height: 100px;
	}
	.event_post_container{
/* 		min-width: 800px; FIXME ANAAAA!!!! */
	}
}

/* Large browser */
@media only screen and (min-width: 1600px) {
	h1#event_site_logo{
		font-size: 20em;
	}
	
	
}

